A couple of lil CSS bug squashes

--- a/framework/assets/css/themeblvd-dark.css
+++ b/framework/assets/css/themeblvd-dark.css
@@ -72,7 +72,7 @@ blockquote.pull-right {
     border-top-color: #000000;
 }
 .table > thead > tr > th {
-    border-bottom-color:; #000000;
+    border-bottom-color: #000000;
 }
 .table > tbody + tbody {
     border-top-color: #000000;
